fix: modal-left aligned to figma

--- a/src/app/features/contacts/contact-form/contact-form.scss
+++ b/src/app/features/contacts/contact-form/contact-form.scss
@@ -23,15 +23,15 @@
 .modal-left {
   background: #2a3647;
   color: #fff;
-  padding: 66px 24px;
+  padding: 66px 46px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: center;
   min-width: 220px;
-  width: 467px;
+  width: 453px;
   height: 594px;
   gap: 12px;
-  justify-content: center;
 
   .join-img {
     width: 55.6px;
